--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="18" />
+    
+	<permission
+        android:name="com.mythos.demo.permission.JPUSH_MESSAGE"
+        android:protectionLevel="signature" />
 
 	<!-- 百度地图所需权限 -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />  
@@ -23,7 +27,30 @@
 	<uses-permission android:name="android.permission.BROADCAST_STICKY" />  
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />  
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	
+	<!-- JPush所需权限 -->
+    <uses-permission android:name="com.mythos.demo.permission.JPUSH_MESSAGE" />
+    <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>  
         
+    <!-- JPush Optional for location -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    
+    
     <application
         android:name=".app.MyApplication"
         android:allowBackup="true"
@@ -31,19 +58,22 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
-        <!-- 百度地图密钥app key -->
-        <meta-data  
-        android:name="com.baidu.lbsapi.API_KEY"  
-        android:value="27FuP8pz1boclNA5CuidG2Gp" />
+        <!-- Activity begin -->
         
+        <!-- JPush demo -->
+        <activity
+            android:name=".ui.JPushActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation" >
+        </activity>
         
-        <!-- service -->
-        <service
-            android:name=".example.mina.MinaClientService"
-            android:enabled="true" >
-        </service>
-        
-        <!-- Activity -->
+        <!-- For test only 测试状态通知栏，需要打开的Activity -->
+        <activity android:name="com.mythos.demo.example.jpush.TestActivity" >
+            <intent-filter>
+                <action android:name="jpush.testAction" />
+                <category android:name="jpush.testCategory" />
+            </intent-filter>
+        </activity>
         
         <!-- mina实现即时聊天demo -->
         <activity
@@ -69,6 +99,105 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <!-- Required JPush SDK核心功能-->
+        <activity
+            android:name="cn.jpush.android.ui.PushActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:configChanges="orientation|keyboardHidden" >
+            <intent-filter>
+                <action android:name="cn.jpush.android.ui.PushActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="com.mythos.demo" />
+            </intent-filter>
+        </activity>
+        
+        <!-- Activity end -->
+        
+        <!-- service begin -->
+        
+        <service
+            android:name=".example.mina.MinaClientService"
+            android:enabled="true" >
+        </service>
+        
+        <!-- Required  JPush SDK核心功能-->
+        <service
+            android:name="cn.jpush.android.service.DownloadService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
+    
+        <!-- Required JPush SDK 核心功能-->
+        <service
+            android:name="cn.jpush.android.service.PushService"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="cn.jpush.android.intent.REGISTER" />
+                <action android:name="cn.jpush.android.intent.REPORT" />
+                <action android:name="cn.jpush.android.intent.PushService" />
+                <action android:name="cn.jpush.android.intent.PUSH_TIME" />
+                
+            </intent-filter>
+        </service>
+        
+        <!-- service end -->
+        
+        <!-- receiver begin -->
+        
+        <!-- Required  JPush SDK核心功能-->
+        <receiver
+            android:name="cn.jpush.android.service.PushReceiver"
+            android:enabled="true" >
+             <intent-filter android:priority="1000">
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" />   <!--Required  显示通知栏 -->
+                <category android:name="com.mythos.demo" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+             <!-- Optional -->
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+                <data android:scheme="package" />
+            </intent-filter>
+   
+        </receiver>
+        
+        <!-- Required  JPush SDK核心功能-->
+        <receiver android:name="cn.jpush.android.service.AlarmReceiver" />
+        
+        <!-- User defined. JPush用户自定义的广播接收器-->
+        <receiver
+            android:name="com.mythos.demo.example.jpush.MyReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="cn.jpush.android.intent.REGISTRATION" /> <!--Required  用户注册SDK的intent-->
+                <action android:name="cn.jpush.android.intent.UNREGISTRATION" />  
+                <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED" /> <!--Required  用户接收SDK消息的intent-->
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED" /> <!--Required  用户接收SDK通知栏信息的intent-->
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" /> <!--Required  用户打开自定义通知栏的intent-->
+                <action android:name="cn.jpush.android.intent.ACTION_RICHPUSH_CALLBACK" /> <!--Optional 用户接受Rich Push Javascript 回调函数的intent-->
+                <action android:name="cn.jpush.android.intent.CONNECTION" /><!-- 接收网络变化 连接/断开 since 1.6.3 -->
+                <category android:name="com.mythos.demo" />
+            </intent-filter>
+        </receiver>
+ 
+        <!-- receiver end -->
+        
+        
+        <!-- 百度地图密钥app key -->
+        <meta-data  
+        android:name="com.baidu.lbsapi.API_KEY"  
+        android:value="27FuP8pz1boclNA5CuidG2Gp" />
+        
+        <!-- JPush Required  . Enable it you can get statistics data with channel -->
+        <meta-data android:name="JPUSH_CHANNEL" android:value="developer-default"/>
+        <meta-data android:name="JPUSH_APPKEY" android:value="931a9a8ec6dfeadd6b9354f1" /> <!--  </>值来自开发者平台取得的AppKey-->
+        
     </application>
 
 </manifest>
